--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,10 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.1'    //it was 1.2.0
     implementation 'com.google.android.material:material:1.5.0' // it was 1.3.0
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3' //was 2.0.4
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'junit:junit:' // was testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3' //was 1.1.2
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0' // was 3.3.0
 }
