--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uk.edu.le.co2103.javaprojectyr3">
 
+    <uses-feature android:name="android.hardware.camera" android:required="true"  />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
