--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.sqlite:sqlite:2.2.0' //added this line
 
 
+    implementation 'androidx.biometric:biometric:1.1.0'
 
     implementation 'androidx.appcompat:appcompat:1.4.1'    //it was 1.2.0
     implementation 'com.google.android.material:material:1.5.0' // it was 1.3.0
