--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,10 @@ dependencies {
     implementation 'net.zetetic:android-database-sqlcipher:4.5.0@aar' //3.5.7 to 4.5.0 changed
     implementation 'androidx.sqlite:sqlite:2.2.0' //added this line
 
-
     implementation 'androidx.biometric:biometric:1.1.0'
+
+    // For image zoom.
+    implementation 'com.github.MikeOrtiz:TouchImageView:1.4.1' // last SupportLib version
 
     implementation 'androidx.appcompat:appcompat:1.4.1'    //it was 1.2.0
     implementation 'com.google.android.material:material:1.5.0' // it was 1.3.0
