--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     // For image zoom.
     implementation 'com.github.MikeOrtiz:TouchImageView:1.4.1' // last SupportLib version
 
+    // For glowing buttons
+    implementation 'com.github.SanojPunchihewa:GlowButton:1.0.1'
+    implementation 'com.github.SMehranB:GlowNeonButton:2.0.1'
+
     implementation 'androidx.appcompat:appcompat:1.4.1'    //it was 1.2.0
     implementation 'com.google.android.material:material:1.5.0' // it was 1.3.0
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3' //was 2.0.4
